--- a/.flowconfig
+++ b/.flowconfig
@@ -8,6 +8,10 @@
 ; Ignore polyfills
 node_modules/react-native/Libraries/polyfills/.*
 
+; These should not be required directly
+; require from fbjs/lib instead: require('fbjs/lib/warning')
+node_modules/warning/.*
+
 ; Flow doesn't support platforms
 .*/Libraries/Utilities/LoadingView.js
 
@@ -23,7 +27,8 @@ node_modules/react-native/flow/
 [options]
 emoji=true
 
-exact_by_default=true
+esproposal.optional_chaining=enable
+esproposal.nullish_coalescing=enable
 
 module.file_ext=.js
 module.file_ext=.json
@@ -39,6 +44,10 @@ suppress_type=$FlowFixMe
 suppress_type=$FlowFixMeProps
 suppress_type=$FlowFixMeState
 
+suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe\\($\\|[^(]\\|(\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native\\(_ios\\)?_\\(oss\\|fb\\)[a-z,_]*\\)?)\\)
+suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(<VERSION>\\)? *\\(site=[a-z,_]*react_native\\(_ios\\)?_\\(oss\\|fb\\)[a-z,_]*\\)?)\\)?:? #[0-9]+
+suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
+
 [lints]
 sketchy-null-number=warn
 sketchy-null-mixed=warn
@@ -47,8 +56,10 @@ untyped-type-import=warn
 nonstrict-import=warn
 deprecated-type=warn
 unsafe-getters-setters=warn
+inexact-spread=warn
 unnecessary-invariant=warn
 signature-verification-failure=warn
+deprecated-utility=error
 
 [strict]
 deprecated-type
@@ -60,4 +71,4 @@ untyped-import
 untyped-type-import
 
 [version]
-^0.149.0
+^0.113.0
